fix: extends students backend adapter to return all group information
