# server/server/src/domain/students-backend-adapter.ts
@@ -1,7 +1,7 @@
 import {IStudent, IStudentExtended} from '../interfaces/student';
 
 export abstract class StudentsBackendAdapter {
-  abstract getStudents(): Promise<IStudent[]>;
+  abstract getStudents(extended?: boolean): Promise<IStudent[]>;
   abstract getStudent(id: string): Promise<IStudentExtended>;
   abstract registerStudent(group: IStudent): Promise<string>;
   abstract updateStudent(id: string, group: IStudent): Promise<IStudent>;
