# server/server/src/routes.ts
@@ -49,6 +49,20 @@ const models: TsoaRoute.Models = {
     type: {dataType: 'string', validators: {}},
   },
   // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+  IGroup: {
+    dataType: 'refObject',
+    properties: {
+      id: {dataType: 'string'},
+      internalId: {dataType: 'string'},
+      grade: {dataType: 'double', required: true},
+      subGroup: {dataType: 'string', required: true},
+      name: {dataType: 'string', required: true},
+      students: {dataType: 'array', array: {dataType: 'refObject', ref: 'IStudent'}},
+      teachers: {dataType: 'array', array: {dataType: 'refObject', ref: 'ITeacher'}},
+    },
+    additionalProperties: false,
+  },
+  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
   IStudent: {
     dataType: 'refObject',
     properties: {
@@ -58,7 +72,7 @@ const models: TsoaRoute.Models = {
       firstSurname: {dataType: 'string', required: true},
       secondSurname: {dataType: 'string'},
       birthDate: {dataType: 'datetime', required: true},
-      group: {ref: 'ID', required: true},
+      group: {dataType: 'union', subSchemas: [{ref: 'ID'}, {ref: 'IGroup'}], required: true},
     },
     additionalProperties: false,
   },
@@ -72,20 +86,6 @@ const models: TsoaRoute.Models = {
       firstSurname: {dataType: 'string', required: true},
       secondSurname: {dataType: 'string'},
       groups: {dataType: 'array', array: {dataType: 'refAlias', ref: 'ID'}},
-    },
-    additionalProperties: false,
-  },
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-  IGroup: {
-    dataType: 'refObject',
-    properties: {
-      id: {dataType: 'string'},
-      internalId: {dataType: 'string'},
-      grade: {dataType: 'double', required: true},
-      subGroup: {dataType: 'string', required: true},
-      name: {dataType: 'string', required: true},
-      students: {dataType: 'array', array: {dataType: 'refObject', ref: 'IStudent'}},
-      teachers: {dataType: 'array', array: {dataType: 'refObject', ref: 'ITeacher'}},
     },
     additionalProperties: false,
   },
@@ -368,7 +368,9 @@ export function RegisterRoutes(app: Router) {
     ...fetchMiddlewares<RequestHandler>(StudentsController.prototype.getStudents),
 
     async function StudentsController_getStudents(request: any, response: any, next: any) {
-      const args = {};
+      const args = {
+        extended: {in: 'query', name: 'extended', required: true, dataType: 'boolean'},
+      };
 
       // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
